--- a/config/cfg_pretrain.yaml
+++ b/config/cfg_pretrain.yaml
@@ -17,8 +17,9 @@ evaluators:
 # Hyperparams - Training
 global_batch_size: 768
 
-epochs: 100000
-eval_interval: 10000
+epochs: 5000
+eval_interval: 1000
+max_eval_batches: 1  # 限制评估 batch 数量
 checkpoint_every_eval: True
 
 lr: 1e-4
