--- a/config/cfg_pretrain.yaml
+++ b/config/cfg_pretrain.yaml
@@ -18,7 +18,8 @@ evaluators:
 global_batch_size: 768
 
 epochs: 5000
-eval_interval: 1000
+eval_interval: 1000  # Evaluation interval in epochs
+eval_interval_steps: null  # Evaluation interval in steps (takes precedence over eval_interval if set)
 max_eval_batches: 1  # 限制评估 batch 数量
 checkpoint_every_eval: True
 
